final format check, added latest PDF

--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -11,9 +11,11 @@ I would like to acknowledge the generous support I received from my family. Than
 to Emily for providing encouragement and the final push to get me to eventually finish.
 Thank you to Ainsley, Porter, Trey, and Ryker for always providing a smile.
 
-I would also like to acknowledge numerous other people for providing
-guidance and support during the process.
-I will only use first names, but you know who you are. Thank you to: Clay, Jess, Chris,  
-Bob, Todd, Leslie, and Mike.
+Next, I would like to thank my advisor, Dr. Gary Hatfield, for the encouragement and guidance
+along the way.  Also, thank you to Clay, Jess, and Chris for helping me formulate 
+the initial idea.  
+
+Finally, I would like to thank my Mom for providing a 
+final grammatical proof-reading of the dissertation.
 
 \end{document}
