--- a/appendices.tex
+++ b/appendices.tex
@@ -144,8 +144,8 @@ APPENDIX\\
         \label{app:requirements-hist}
             Figure \ref{fig:req-hist} shows a histogram of the data
             for requirements.  The histogram is based upon the
-            fraction $\frac{Scheduled Requirements}{Actual Requirements}$. The
-            values where the fraction equals 1 have been left out of the histogram.
+            fraction, $\frac{Scheduled Requirements}{Actual Requirements}$. The
+            values where the fraction equals one have been left out of the histogram.
             So, the histogram show only the data that did not deliver exactly
             on the number of requirements. Rarely are more requirements actually 
             delivered than what was scheduled.  On the opposite side, the histogram
@@ -178,27 +178,27 @@ APPENDIX\\
     
         The following are additional data points that could be tracked for project estimation.
         \begin{easylist}[itemize]
-            & Change to Database Structure  
-            & Modify Database Data    
-            & Create a New Database, number of new databases  
-            & Server Configuration Changes Required   
-            & New Servers Required   
-            & Number of People Involved  
-            & Number of (sub)Systems Involved  
-            & Estimation Date
-            & Number of Days Allowed
-            & List of Other Attributes
-            & Number of Screens Involved 
-            & Actual Values (hours, days, dollars) 
-            & Estimated Values
-            && Estimated Dev Hours: 
+            & Change to database structure  
+            & Modify database data    
+            & Create a new database, number of new databases  
+            & Server configuration changes required   
+            & New servers required   
+            & Number of people involved  
+            & Number of (sub)systems involved  
+            & Estimation date
+            & Number of days allowed
+            & List of other attributes
+            & Number of screens involved 
+            & Actual values (hours, days, dollars) 
+            & Estimated values
+            && Estimated development hours: 
                 The number of development hours estimated for a 
                 project, this is just developer hours
-            && Estimated Doc Hours: 
+            && Estimated documentation hours: 
                 The number of documentation hours estimated for a project
-            && Estimated Test Hours:
+            && Estimated testing hours:
                 The number of testing hours estimated for a project
-            && Estimated Deployment Hours: 
+            && Estimated deployment hours: 
                 The number of estimated hours required to 
                 deploy the project
         \end{easylist}
