--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -97,7 +97,7 @@
             \nomenclature{UAT}{User Acceptance Testing} 
         \item[PROD] (Production) - The software has been released to the 
         final audience. \nomenclature{PROD}{Production} 
-        \item[defect] ``A software defect is a bug or error that causes
+        \item[Defect] - ``A software defect is a bug or error that causes
                     software to either stop operating or to produce
                     invalid or unacceptable results'' as quoted from Capers Jones
                 \cite{Jones2009}.  It is important to mention that even though defects are typically 
@@ -350,7 +350,7 @@
         \item \textbf{Categorization} -  The activities must progress 
             through categories during an endeavour.
         \item \textbf{Competencies} - Specific competencies will 
-            be required for completing activities
+            be required for completing activities.
     \end{enumerate}
     
     The kernel defines alphas, which are seven dimensions with
