--- a/paper_40_cri.tex
+++ b/paper_40_cri.tex
@@ -97,7 +97,7 @@
                 % \midrule
                 \endhead
                 
-                1 & Software is unavailable and no workaround   \\
+                1 & Software is unavailable with no workaround   \\
                 \myrowcolour%
                 2 & Software performance degraded with no workaround \\
                 3 & Software performance degraded but workaround exists \\
