--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -14,7 +14,7 @@ programmer, database administrator, and documentation specialist.
 \subsection{WHAT IS SOFTWARE?}
 Numerous definitions can be found for the term \textit{software}.
 Software is more than just computer programs. According to Ian Sommerville \cite{Sommerville2001}, 
-"Software is not just the programs but also all associated documentation and configuration data which is needed to make these programs operate correctly."
+``Software is not just the programs but also all associated documentation and configuration data which is needed to make these programs operate correctly.''
 This is the definition used for the remainder of this dissertation.
 
 
@@ -170,7 +170,7 @@ This is the definition used for the remainder of this dissertation.
                 development life cycle.
         \end{description}
         
-        These 5 steps cannot cover everything that needs to be accomplished
+        These five steps cannot cover everything that needs to be accomplished
         during a project.  They just provide of rough guideline of what needs
         to be completed in order to ensure a more successful software release.
         Appendix \ref{app:detailedSDLC} contains a more detailed list of the
