final updates before format check

--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -82,7 +82,7 @@
 
     \begin{description}
     
-        \item[Application] - a software system or a collection of other applications 
+        \item[Application] - A software system or a collection of other applications 
         \item[Release] - A collection of projects being put in production on a specified date
         \item[Project] - A body of work involving zero or more applications in preparation for a release 
         \item[SIT] (Systems Integration Testing) - The initial step of testing
@@ -254,7 +254,7 @@
     The methodology provides a score based upon the 
     productivity and quality increase of the technique being evaluated.  
     Points are positive or negative based upon the 
-    presence of various techniques. A couple of example techniques are: 
+    presence of various techniques. Two examples of such techniques are: 
     automated source code analysis and continuous integration.  The end 
     result is a score in range $[-10,10]$. 
     While the result is a single number score, it does not account for the 
@@ -293,7 +293,7 @@
     and improve real
     processes (i.e., not assumed processes) by extracting knowledge from event logs
     readily available in today's systems.''  Creating software involves
-    a vast amount of processes.  Numerous logs of raw data are collected.  
+    many processes.  Numerous logs of raw data are collected.  
     One application of process mining in the area of software development
     was an algorithm and information for measuring a software engineering process from
     the Software Configuration Management (SCM) \cite{Rubin2007}.
@@ -391,7 +391,7 @@
     more hours spent on development, or some other arbitrary measure.}
     or more complex.  Thus, finding a value for quality is easier 
     than interpreting that value.  No matter the interpretation,
-    the goal is to release the number of problems with the software.
+    the goal is to decrease the number of problems with the software.
     Top 10 lists have been created for techniques to remove problems
     from software \cite{Boehm2001}.  
     A number of different techniques or best practices
@@ -437,7 +437,7 @@
     Later the field began to emerge more heavily, but still
     remained primarily methods of data mining applied to 
     software engineering \cite{Kaner2004,Xie2009,Taylor2010,Halkidi2011}. 
-    Finally, The term software intelligence was proposed for the field of study
+    The term software intelligence was proposed for the field of study
     \cite{Hassan2010}, but eventually
     the term software analytics became the dominant term for referring to the 
     field of study \cite{Buse2010, Zhang2011}.
@@ -508,12 +508,12 @@
     Unfortunately, there are vast amounts of information that 
     need to be collected to meet the analytic needs of 
     developers and managers \cite{Buse2012}.  When the
-    data and tools exists, the analytics should help an
+    data and tools exist, the analytics should help an
     organization with the following tasks.
     \begin{itemize}
         \item Evaluate a project
         \item Determine what is and is not working
-        \item Manage Risk
+        \item Manage risk
         \item Anticipate changes
         \item Evaluate prior decisions
     \end{itemize}
