--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -185,7 +185,7 @@ This is the definition used for the remainder of this dissertation.
     many of the other definitions.
     \nomenclature{IEEE}{Institute of Electrical and Electronics Engineers}
     IEEE ISO610.12 defines software engineering as, 
-    ''The application of a systematic, disciplined, quantifiable approach to the development, operation, and maintenance of software''
+    ``The application of a systematic, disciplined, quantifiable approach to the development, operation, and maintenance of software''
     \cite{Ieee1990}.
     
     Software engineering has struggled to determine the correct projects 
