--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -42,9 +42,9 @@
                 \nomenclature{SLOC}{Source Lines Of Code}
             \item NOM - The Number of Methods per class
                 \nomenclature{NOM}{Number of Methods}
-            \item Complexity - A numerical measure of the code complexity,
-                some common examples are McCabe \cite{McCabe1976} and 
-                Halstead \cite{Halstead1977}
+            \item Complexity - A numerical measure of the code complexity
+                (some common examples are McCabe \cite{McCabe1976} and 
+                Halstead \cite{Halstead1977})
             \item Design - The amount of coupling and cohesion present 
                 in the software code
             \item Source Code Analysis - Tools that determine whether 
