--- a/paper_70_case-study.tex
+++ b/paper_70_case-study.tex
@@ -281,7 +281,7 @@
         
     \subsection{REQUIREMENTS}
     \label{sec:case-req}
-        The data for requirements is actually counts of story points
+        The data for requirements are actually counts of story points
         instead of requirements.  That is because story points
         are a better choice for counting, since they are more
         uniform in size than raw requirements.  Also, the data
