--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -4,7 +4,7 @@
 \newpage
 
 \begin{center}
-ACKNOWLEDGEMENTS\\
+ACKNOWLEDGEMENTS
 \end{center}
 
 I would like to acknowledge the generous support I received from my family. Thank you
