--- a/signature.tex
+++ b/signature.tex
@@ -3,31 +3,33 @@
 
 \begin{center}
 \yourtitle
-\vspace{0.5in}
 \end{center}
 
 \par This dissertation is approved as a creditable and independent investigation by a 
-candidate for the Doctor of Philosophy degree and is acceptable for 
+candidate for the Doctor of Philosophy in \yourmajor \ degree and is acceptable for 
 meeting the dissertation requirements for this degree. Acceptance of this does not imply 
 that the conclusions reached by the candidates are necessarily the conclusions of the 
 major department.
 
-\vspace{1.5in}
 
 \singlespacing
 
-\hspace*{\fill}\underline{$~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~$}\\
-\hspace*{194bp}\youradvisor\\
-\hspace*{\fill}Dissertation Advisor \hspace*{68bp}Date
+\begin{textblock}{8.5}(2.7,5.875)
 
-\vspace{1in}
+\underline{\hspace{4.2in}}\\
+\youradvisor\\
+Dissertation Advisor \hspace{2.3in}Date
 
-\hspace*{\fill}\underline{$~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~$}\\
-\hspace*{194bp}\departmenthead\\
-\hspace*{\fill}Head, Math and Statistics \hspace*{39bp}Date
+\vspace{.75in}
 
-\vspace{1in}
+\underline{\hspace{4.2in}}\\
+\departmenthead\\
+Head, Department of Mathematics and Statistics \hspace{0.27in}Date
 
-\hspace*{\fill}\underline{$~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~$}\\
-\hspace*{194bp}Dean, Graduate School \hspace*{54bp}Date
+\vspace{.5in}
+
+\underline{\hspace{4.2in}}\\
+Dean, Graduate School \hspace{2.12in}Date
+
+\end{textblock}
 \end{document}
