--- a/titlepage.tex
+++ b/titlepage.tex
@@ -6,18 +6,22 @@
 
 \yourtitle\\
 
-\vspace{2.75in}
+\begin{textblock}{8.5}(.25,3.8)
+    \centering
+    BY\\[1ex]
+    \yourname  
+\end{textblock}
 
-BY\\[1ex]
-\yourname  %% needs to be 4.5 inches from the top of the page
+\begin{textblock}{8.5}(.25,8)
+    \centering
+    
+    A dissertation submitted in partial fulfilment of the requirements for the\\[.9ex]
+    Doctor of Philosophy\\[.9ex]
+    Major in \yourmajor\\ [.9ex]
+    South Dakota State University\\ [.9ex]
+    \number\year
+\end{textblock}
 
-\vfill
-
-A dissertation submitted in partial fulfilment of the requirements for the\\
-Doctor of Philosophy\\
-Major in \yourmajor\\
-South Dakota State University\\
-\number\year
 \end{titlepage}
 
 \end{document}
