switching font to times, had to resize some graphs

--- a/SDSUThesis.tex
+++ b/SDSUThesis.tex
@@ -203,6 +203,8 @@
 
 \doublespacing
 
+\fontfamily{ptm}\selectfont %% set font to Times
+
 %% Title page
 \subfile{titlepage}
 %% End title page
@@ -214,11 +216,11 @@
 %% Approval/signature page
 \subfile{signature}
 
-%% Acknowledgements page
-\subfile{acknowledgements}
-
 %% Quotes (optional)
 \subfile{quotes}
+
+%% Acknowledgements page
+\subfile{acknowledgements}
 
 %% Table of contents
 \newpage
@@ -227,7 +229,7 @@
 %% Abbreviations
 \newpage
 \printnomenclature[1.0in]
-\addcontentsline{toc}{section}{ABREVIATIONS}
+\addcontentsline{toc}{section}{ABBREVIATIONS}
 
 %% List of figures
 \newpage
