minor fix to the requirements formula

--- a/paper_40_cri.tex
+++ b/paper_40_cri.tex
@@ -919,11 +919,11 @@
                 \begin{displaymath}
                    S_{5_i} = \left\{
                      \begin{array}{lr}
-                       \text{where } R_{a_i} > b \cdot R_{s_i} & :  1 \cdot k \\
+                       \text{where } R_{a_i} >  R_{s_i} \cdot (b + 1) & :  1 \cdot k \\
                        \text{where } R_{a_i} \leq R_{s_i} & : \frac{R_{a_i} - R_{s_i}}{R_{s_i}}\cdot k \\
                        \text{where } R_{a_i} > R_{s_i}  & : \frac{R_{a_i} - R_{s_i} }{b \cdot R_{s_i}}\cdot k
                      \end{array}
-                   \right. \text{   , calculate requirements score for each project $i$}
+                   \right. \text{   , requirements score for project $i$}
                 \end{displaymath}
                 where
                 \begin{itemize}
